# Email-Automation-OpenEnv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
my_env/: env.py  grader.py  models.py
server/: app.py
